# fastscaff

./: .gitignore  README_CN.md  pyproject.toml
fastscaff/: add_celery.py  cli.py  generator.py  model_generator.py
fastscaff/templates/app/api/: deps.py.jinja2
fastscaff/templates/app/api/v1/: deps.py.jinja2
fastscaff/templates/app/api/v1/endpoints/: auth.py.jinja2  users.py.jinja2
fastscaff/templates/app/core/: config.py.jinja2  database_sqlalchemy.py.jinja2  lifespan.py.jinja2  logger.py.jinja2  security.py
fastscaff/templates/app/exceptions/: __init__.py  base.py  handlers.py
fastscaff/templates/app/repositories/: base_sqlalchemy.py.jinja2  user_sqlalchemy.py.jinja2  user_tortoise.py.jinja2
fastscaff/templates/app/services/: auth.py.jinja2  auth_sqlalchemy.py  auth_tortoise.py  base.py.jinja2  user.py.jinja2  user_sqlalchemy.py  user_tortoise.py
fastscaff/templates/app/utils/: sort_helper.py.jinja2
fastscaff/templates/base/: requirements.txt.jinja2
