[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastscaff"
version = "0.2.2"
description = "FastAPI project scaffolding tool"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FastScaff"}
]
keywords = ["fastapi", "scaffold", "cli", "project-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pymysql>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/lee-hangzhou/fastscaff"
Repository = "https://github.com/lee-hangzhou/fastscaff"
Documentation = "https://github.com/lee-hangzhou/fastscaff#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
fastscaff = "fastscaff.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastscaff*"]

[tool.setuptools.package-data]
fastscaff = ["templates/**/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["B008"]
